fixing spacing withe image gallery

--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -31,6 +31,7 @@
 .btn-sml {
 	padding: $spacing-s $spacing-base;
   font-size: 0.888em;
+  box-shadow: 0 2px 40px 0 transparentize($swatch-color-blue, 0.5);
 }
 
 .play-btn {
